# Liquidity_forecasting

./: README.md  environment.yml  pyproject.toml
.streamlit/: config.toml
app/: streamlit_app.py
conf/base/: catalog.yml  parameters.yml
conf/local/: README.md
data/01_raw/: account_types.csv  clients.csv  eod_balances.csv  interest_rates.csv  remuneration.csv
data/03_primary/: clients_master.csv  processed_eod_balances.csv
data/04_feature/: linked_balances.csv
data/05_model_input/: country_daily.csv  country_features.csv
data/07_model_output/: country_forecast.csv
data/08_reporting/: country_totals.csv  latest_summary.csv
src/liquidity/: __init__.py  pipeline_registry.py  settings.py
src/liquidity/pipelines/: __init__.py
src/liquidity/pipelines/forecasting/: __init__.py  nodes.py  pipeline.py
tests/: test_nodes.py  test_pipeline_registry.py
